fix: remove jsxc-fullscreen overflow: hidden

--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -1,5 +1,4 @@
 body.jsxc-fullscreen {
-  overflow: hidden;
 
   #jsxc-roster {
     border: 0;
